Add new guides for Raspberry Pi control flow and potentiometer usage; update judgement game output image and motor speed logger details

--- a/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/4-led-blink.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/4-led-blink.mdx
@@ -157,5 +157,6 @@ Below is the complete code, combining the initialization and blinking sequence. 
 ## Expected Outcome
 
 When you run the program, your physical LED connected to GPIO Pin 11 should blink on and off three times. Each "on" state lasts for 500 milliseconds followed by an "off" state for 500 milliseconds. Once the sequence is complete, the program cleans up the GPIO settings and exits.
-![Led Blinking](./images/blink_led.gif)
+![Led Blinking](./images/LedBlinkSlow.gif)
+
 Enjoy watching your LED blink and have fun tinkering with your Raspberry Pi projects!
