--- a/src/content/docs/book/part-1-instructions/3-control-flow/3-explore/3-4-judgement-game.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/3-explore/3-4-judgement-game.mdx
@@ -20,6 +20,8 @@ Your challenge is to build a simple judgement game using a potentiometer and an 
 - The program calculates the absolute difference between the target percentage and your potentiometer reading.
 - The final output shows the target, your reading, and the difference.
 
+![Example Output](./images/judgement_game_output.png)
+
 # What You Need to Do
 
 1. **Initialize the ADC and Potentiometer:**
