Fix broken links due to structure changes

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/05-return.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/05-return.mdx
@@ -156,7 +156,7 @@ Let's explore how this code works.
 
 <MySwiper client:only height="" images={sliderReturn}></MySwiper>
 
-For other examples, have a look back at the [example using parameters](/book/part-2-organised-code/2-organising-code/2-trailside/04-parameter#functions-with-parameters). The `square` function uses the return statement to return the squared value, while `point_in_circle` returns the value from the comparison to indicate if the point is within the circle.
+For other examples, have a look back at the [example using parameters](/book/part-2-organised-code/2-organising-code/2-trailside/04-parameter). The `square` function uses the return statement to return the squared value, while `point_in_circle` returns the value from the comparison to indicate if the point is within the circle.
 
 :::note[Summary]
 
