--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-recursion.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-recursion.mdx
@@ -257,5 +257,4 @@ Being able to think recursively is important, as this can be useful in different
 
 > Are there some other classic recursive problems
 
-There are a few classic problems that you often encounter when exploring recursion for the first time. We will look at how you can use recursion to create the [Fibonacci sequence](#building-the-fibonacci-sequence) and use it to solve the [Towers of Hanoi](#towers-of-hanoi).
-
+There are a few classic problems that you often encounter when exploring recursion for the first time. We will look at how you can use recursion to create the [Fibonacci sequence](/book/part-2-organised-code/2-organising-code/2-trailside/10-recursion-fibonacci) and use it to solve the [Towers of Hanoi](/book/part-2-organised-code/2-organising-code/2-trailside/10-recursion-towers).
