Add inheritance and polymorphism

--- a/src/content/docs/book/part-2-organised-code/7-member-functions/1-tour/1-account.mdx
+++ b/src/content/docs/book/part-2-organised-code/7-member-functions/1-tour/1-account.mdx
@@ -20,6 +20,10 @@ Methods:
  - get_balance: will return the current balance.
 ```
 
+We can picture this as shown in the following image.
+
+![Visualisation of the account class](./images/account.png)
+
 In `main`, we can then create a few account objects, deposit and withdraw some funds, and get them to print their details to the terminal.
 
 :::tip
@@ -257,7 +261,7 @@ Objects are values created from a struct or class type, where we are using membe
 
 :::
 
-## Extending the class
+## Complete the class
 
 Have a go at adding the `deposit` and `withdraw` methods. These should accept an integer value for the amount to be deposited or withdrawn. Only change the balance if the value to be deposited/withdrawn is positive. Test this with a couple of the account objects in main, and make sure that their values are updated as expected.
 
