--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-exceptions.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-exceptions.mdx
@@ -2,7 +2,7 @@
 title: Exceptions
 banner:
     content: |
-        Advanced topic! You may skip this and return later...
+        Advanced topic! You may want to skip this and return later...
 ---
 
 import MySwiper from "/src/components/react/myswiper.jsx";
