Update Monty Python links

--- a/src/content/docs/book/part-2-organised-code/10-project/1-tour/04-iteration-2.mdx
+++ b/src/content/docs/book/part-2-organised-code/10-project/1-tour/04-iteration-2.mdx
@@ -536,5 +536,5 @@ Have a go at adding the ability to delete stock from the shop. This will need:
   - Add code to handle the user interacts (using select cheese)
 
 :::tip
-If you are using the `vector<cheese_data>`, you can remove an element at an index using: `shop.cheeses.erase(shop.cheeses.begin() + index);`. This is not the most intuitive library, but you can easily find this with a quick search or prompt to a generative AI.
+If you are using the `vector<cheese_data>`, you can remove an element at an index using: `shop.cheeses.erase(shop.cheeses.begin() + index);`. This is not the most intuitive library, but you can easily find this with a quick web search or prompt to a generative AI.
 :::
