--- a/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/4-led-blink.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/4-led-blink.mdx
@@ -8,7 +8,7 @@ sidebar:
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 import { Steps } from "@astrojs/starlight/components";
 
-Welcome to our fun, step-by-step guide on how to blink a physical LED using SplashKit on your Raspberry Pi! In this tutorial, you'll learn how to set up your hardware, write simple code (without loops) to turn your LED on and off with delays, as well as how to run your project. Get ready to see your LED come to life!
+Welcome to our fun, step-by-step guide on how to blink a physical LED using SplashKit on your Raspberry Pi! In this tutorial, you'll learn how to set up your hardware, write simple code to turn your LED on and off multiple times, as well as how to run your project. Get ready to see your LED come to life!
 
 ## Hardware Setup
 
@@ -22,6 +22,30 @@ To build the simple LED circuit shown below (in real life), here's what you need
 - **Breadboard and Jumper Wires:** For making temporary connections.
 - **Raspberry Pi:** With a GPIO pin (we'll use GPIO Pin 11) and a Ground (GND) pin.
 
+:::note[Just getting started with circuits?]
+
+These sections include links with more information about the circuit components:
+
+<details>
+<summary>LEDs and Resistors:</summary>
+
+- [LEDs (Introduction to Raspberry Pi Pico guide)](https://projects.raspberrypi.org/en/projects/introduction-to-the-pico/7)
+- [Resistors (Introduction to Raspberry Pi Pico guide)](https://projects.raspberrypi.org/en/projects/introduction-to-the-pico/6)
+- [Resistors for LED Circuits](https://eepower.com/resistor-guide/resistor-applications/resistor-for-led/)
+
+</details>
+<details>
+<summary>Breadboards and Jumper Wires:</summary>
+
+- [How to Use a Breadboard for Electronics and Circuits](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard)
+  - [What is inside a breadboard?](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard#inside-breadboard)
+  - [How are the holes connected?](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard#holes)
+  - [What is a breadboard diagram?](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard#breadboard-diagram)
+- [What are jumper wires and what kind should I use?](https://www.sciencebuddies.org/science-fair-projects/references/how-to-use-a-breadboard#jumper-wires)
+
+</details>
+:::
+
 ### Wiring Instructions
 
 ![Led Blink Circuit](./images/blinkledcircuit.png)
@@ -32,7 +56,7 @@ To build the simple LED circuit shown below (in real life), here's what you need
 
     Place the resistor across the center channel of the breadboard, or across any two separate rows.
 
-    Then place the LED across two rows (as shown above), with the cathode (short leg) on the same row as one end of the resistor.
+    Then place the LED across two rows (as shown in the breadboard diagram above), with the cathode (short leg) on the same row as one end of the resistor.
 
 2. **Attach the ground wire:**
 
@@ -47,122 +71,16 @@ To build the simple LED circuit shown below (in real life), here's what you need
 </Steps>
 
 :::caution[Safety Note:]
-Always double-check your connections and ground yourself before handling the circuit to avoid static discharge or accidental damage!
+Always double-check your connections and ground yourself before handling the circuit to avoid static discharge or accidental damage.
 :::
 
-## Blinking the LED
+## Software Setup
+
+To set up the software side of this project, you can follow the steps below:
 
 <Steps>
 
-1. **Initialise the GPIO Pins:**
-
-    First, we'll initialise the GPIO system on the Raspberry Pi using SplashKit and set up our chosen pin as an output.
-
-    ```csharp
-    using SplashKitSDK;
-    using static SplashKitSDK.SplashKit;
-
-    // Initialise the GPIO system
-    RaspiInit();
-
-    // Define the LED pin (using physical Pin 11)
-    GpioPin ledPin = GpioPin.Pin11;
-
-    // Set the LED pin to output mode (output mode is represented by 1)
-    RaspiSetMode(ledPin, GpioPinMode.GpioOutput);
-    ```
-
-2. **Blink the LED:**
-
-    Now, we’ll blink the LED by turning it on and off with delays in between. We’re keeping it simple—no loops here! Each command is written in sequence:
-
-    ```csharp
-    // Turn the LED ON
-    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
-    Delay(500);  // Wait for 500 milliseconds
-
-    // Turn the LED OFF
-    RaspiWrite(ledPin, GpioPinValue.GpioLow);
-    Delay(500);  // Wait for 500 milliseconds
-
-    // Blink the LED again (ON)
-    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
-    Delay(500);  // Wait for 500 milliseconds
-
-    // Turn the LED OFF again
-    RaspiWrite(ledPin, GpioPinValue.GpioLow);
-    Delay(500);  // Wait for 500 milliseconds
-
-    // One more blink (ON)
-    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
-    Delay(500);  // Wait for 500 milliseconds
-
-    // Finally, turn the LED OFF
-    RaspiWrite(ledPin, GpioPinValue.GpioLow);
-    Delay(500);  // Wait for 500 milliseconds
-    ```
-
-3. **Reset the GPIO system:**
-
-    Lastly, we'll clean up the GPIO system and ensure our pins are turned off.
-
-    ```csharp
-    // Clean up the GPIO system
-    RaspiCleanup();
-    ```
-
-</Steps>
-
-### Full Code Example
-
-Below is the complete code, combining the initialisation, blinking sequence and resetting the system. All commands are executed one after the other—no loops!
-
-<Accordion>
-  <AccordionItem header="Full LED Blink Code (C#)">
-  
-  ```csharp
-  using SplashKitSDK;
-  using static SplashKitSDK.SplashKit;
-
-  // Initialise the GPIO system
-  RaspiInit();
-
-  // Define the LED pin (using physical Pin 11)
-  GpioPin ledPin = GpioPin.Pin11;
-
-  // Set the LED pin to output mode
-  RaspiSetMode(ledPin, GpioPinMode.GpioOutput);
-
-  // Blink 1: Turn LED ON, wait, then OFF
-  RaspiWrite(ledPin, GpioPinValue.GpioHigh);
-  Delay(500);  // LED ON for 500 ms
-  RaspiWrite(ledPin, GpioPinValue.GpioLow);
-  Delay(500);  // LED OFF for 500 ms
-
-  // Blink 2: Turn LED ON, wait, then OFF
-  RaspiWrite(ledPin, GpioPinValue.GpioHigh);
-  Delay(500);
-  RaspiWrite(ledPin, GpioPinValue.GpioLow);
-  Delay(500);
-
-  // Blink 3: Turn LED ON, wait, then OFF
-  RaspiWrite(ledPin, GpioPinValue.GpioHigh);
-  Delay(500);
-  RaspiWrite(ledPin, GpioPinValue.GpioLow);
-  Delay(500);
-
-  // Clean up the GPIO system
-  RaspiCleanup();
-  ```
-  
-  </AccordionItem>
-</Accordion>
-
-### Build and Run
-
-<Steps>
-
-1. **Create a new C# project for the LED blinking program:**
+1. ### Create a new C# project
 
     Open your terminal and create a new C# console project:
 
@@ -174,11 +92,50 @@ Below is the complete code, combining the initialisation, blinking sequence and 
     code .
     ```
 
-2. **Copy/Paste the example code:**
+2. ### Write the code
 
-    Replace the contents of your `Program.cs` file with the full code example above.
+    Copy the code below, then replace the contents of your `Program.cs` file with this code:
 
-3. **Build and run the project:**
+    ```csharp
+    using SplashKitSDK;
+    using static SplashKitSDK.SplashKit;
+
+    // Initialise the GPIO system
+    RaspiInit();
+
+    // Define the LED pin (using physical Pin 11)
+    GpioPin ledPin = GpioPin.Pin11;
+
+    // Set the LED pin to output mode
+    RaspiSetMode(ledPin, GpioPinMode.GpioOutput);
+
+    // Blink 1: Turn LED ON, wait, then OFF
+    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
+    Delay(500);  // LED ON for 500 ms
+    RaspiWrite(ledPin, GpioPinValue.GpioLow);
+    Delay(500);  // LED OFF for 500 ms
+
+    // Blink 2: Turn LED ON, wait, then OFF
+    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
+    Delay(500);
+    RaspiWrite(ledPin, GpioPinValue.GpioLow);
+    Delay(500);
+
+    // Blink 3: Turn LED ON, wait, then OFF
+    RaspiWrite(ledPin, GpioPinValue.GpioHigh);
+    Delay(500);
+    RaspiWrite(ledPin, GpioPinValue.GpioLow);
+    Delay(500);
+
+    // Clean up the GPIO system
+    RaspiCleanup();
+    ```
+
+    :::note
+    You will learn more about SplashKit's Raspberry Pi code in Part 1, but for now you can just copy/paste this code without needing to know the details just yet.
+    :::
+
+3. ### Build and run the project
 
     Use the following command to build and run the program:
 
@@ -188,7 +145,7 @@ Below is the complete code, combining the initialisation, blinking sequence and 
 
 </Steps>
 
-### Expected Outcome
+## Expected Outcome
 
 When you run the program, your physical LED connected to GPIO Pin 11 should blink on and off three times. Each "on" state lasts for 500 milliseconds followed by an "off" state for 500 milliseconds. Once the sequence is complete, the program cleans up the GPIO settings and exits.
 
