--- a/src/content/docs/book/part-0-getting-started/2-computer-use/0-panorama/05-raspberry-pi.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/0-panorama/05-raspberry-pi.mdx
@@ -10,6 +10,7 @@ import { Steps } from "@astrojs/starlight/components";
 ## What’s a Raspberry Pi, Anyway?
 
 ![Raspberry Pi](./images/raspberrypi.png)
+<div class="caption">Image from <a href="https://learn.littlebirdelectronics.com.au/guides/getting-started-with-the-raspberry-pi-4">Little Bird Electronics</a></div>
 
 Imagine having a mini-computer that fits in the palm of your hand—cool, right? The Raspberry Pi is exactly that! It’s a tiny, affordable computer packed with power and endless possibilities. Whether you want to create your own video game, build a robot, or set up a secret spy project, the Raspberry Pi is your launchpad for creativity and fun.
 
