Update blink LED diagram and add attribution

--- a/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/4-led-blink.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/4-led-blink.mdx
@@ -49,6 +49,7 @@ These sections include links with more information about the circuit components:
 ### Wiring Instructions
 
 ![Led Blink Circuit](./images/blinkledcircuit.png)
+<div class="caption">Image created with <a href="https://fritzing.org/">Fritzing</a></div>
 
 <Steps>
 
